src/css/structures/_palette.sass
@import "compass/css3/border-radius"

#wrapper
  height: 100%

// *************************************
//
//   Structure - Palette
//
// -------------------------------------
//   Template (Jade)
// -------------------------------------
//
// .palette[.structure--modifier](.is-state)(.has-context)
//   .palette-colors[.structure--modifier](.is-state)(.has-context)
//     .palette-color
//   .palette-tones[.structure--modifier](.is-state)(.has-context)
//     .palette-tone
//
// *************************************

#palette
  position: absolute
  width: 100%
  height: 100%
  display: flex
  flex-direction: column

// -------------------------------------
//   Modifiers
// -------------------------------------

.palette-list
  display: flex
  flex-direction: column
  flex: 1

.palette-tones
  display: -webkit-box
  display: -moz-box
  display: -ms-flexbox
  display: -webkit-flex
  display: flex
  flex: auto

.palette-tone
  position: relative
  width: 100%

.palette-dot
  +border-radius(2px)
  display: none
  text-indent: -9999px
  line-height: 0
  height: 30%
  width: 100%
  background-color: rgba(MDcolor(grey, 50), .1)

// -------------------------------------
//   States
// -------------------------------------

.palette-tone.is-selected
  .palette-dot
    display: block

// -------------------------------------
//   Context
// -------------------------------------

// .has-structure

// -------------------------------------
//   Scaffolding
// -------------------------------------

// .structure-scaffolding

